--- a/src/main/webapp/views/components/fancyscroll.html
+++ b/src/main/webapp/views/components/fancyscroll.html
@@ -377,7 +377,7 @@
                 </div>
                 <div class="col-6 col-sm">
                   <ul class="list-unstyled">
-                    <li class="nav-item"><a class="nav-link py-1 pl-0 text-600" href="../components/tabs.html">Tabs</a></li>
+                    <li class="nav-item"><a class="nav-link py-1 pl-0 text-600" href="tabs.jsp">Tabs</a></li>
                     <li class="nav-item"><a class="nav-link py-1 pl-0 text-600" href="../components/tooltips.html">Tooltips</a></li>
                     <li class="nav-item"><a class="nav-link py-1 pl-0 text-600" href="../components/toasts.html">Toasts</a></li>
                     <li class="nav-item"><a class="nav-link py-1 pl-0 text-600" href="../components/php-AJAX-form.html">Php AJAX form</a></li>
