--- a/src/main/resources/static/scss/_user.scss
+++ b/src/main/resources/static/scss/_user.scss
@@ -3,3 +3,11 @@
 // user.scss
 //
 // Place your own theme CSS or SCSS rules below this line, these rules will override any Bootstrap and theme variables.
+a,
+a:hover,
+a:active,
+a:visited,
+a:link {
+  color: transparent;
+  outline: none;
+}
